<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
    	<groupId>ru.yandex.practicum.market</groupId>
    	<artifactId>market-parent</artifactId>
    	<version>0.0.1-SNAPSHOT</version>
    	<relativePath>../pom.xml</relativePath>
	</parent>
	
	<groupId>ru.yandex.practicum.market</groupId>
	<artifactId>shop</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>shop</name>
	<description>My Market Application</description>
	<packaging>jar</packaging> 
	
	<properties>
		<java.version>21</java.version>
		<testcontainers.version>1.19.3</testcontainers.version>  <!-- ДОБАВЛЕНО -->
	</properties>
	
	<dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-r2dbc</artifactId>
        </dependency>
        
        <!-- PostgreSQL R2DBC драйвер -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>r2dbc-postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

		<dependency>
    		<groupId>org.postgresql</groupId>
    		<artifactId>postgresql</artifactId>
    	<scope>test</scope>  <!-- Ключевой момент! -->
		</dependency>


		 <dependency>
        	<groupId>io.projectreactor</groupId>
        	<artifactId>reactor-test</artifactId>
        	<scope>test</scope>
    	</dependency>
    	
		<!-- Excel -->
		<dependency>
    		<groupId>org.apache.poi</groupId>
    		<artifactId>poi-ooxml</artifactId>
    		<version>5.2.5</version>
		</dependency>
		
		<!-- Thymeleaf -->
    	<dependency>
      		<groupId>org.springframework.boot</groupId>
      		<artifactId>spring-boot-starter-thymeleaf</artifactId>
    	</dependency>

		<dependency>
    		<groupId>org.liquibase</groupId>
    		<artifactId>liquibase-core</artifactId>
    		<version>4.25.1</version>
		</dependency>

		<dependency>
            <groupId>io.swagger.core.v3</groupId>
            <artifactId>swagger-annotations</artifactId>
            <version>2.2.20</version>
        </dependency>

        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
        </dependency>

        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis-reactive</artifactId>
		</dependency>
    	
		<!-- ===== ТЕСТОВЫЕ ЗАВИСИМОСТИ ===== -->
		
		<!-- Основной тестовый стартер Spring Boot -->
    	<dependency>
      		<groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
    	</dependency>
		
		<!-- Testcontainers -->
		<dependency>
    		<groupId>org.testcontainers</groupId>
    		<artifactId>testcontainers</artifactId>
    		<version>${testcontainers.version}</version>  <!-- ДОБАВЛЕНА ВЕРСИЯ -->
    		<scope>test</scope>
		</dependency>
		
		<dependency>
    		<groupId>org.testcontainers</groupId>
    		<artifactId>postgresql</artifactId>
			<version>${testcontainers.version}</version>
    		<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>it.ozimov</groupId>
			<artifactId>embedded-redis</artifactId>
			<version>0.7.3</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-simple</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- MockWebServer для мокирования payment-service в тестах -->
		<dependency>
			<groupId>com.squareup.okhttp3</groupId>
			<artifactId>mockwebserver</artifactId>
			<version>4.12.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.squareup.okhttp3</groupId>
			<artifactId>okhttp</artifactId>
			<version>4.12.0</version>
			<scope>test</scope>
		</dependency>
		
		<!-- Обязательно для JUnit 5 -->
		<dependency>
    		<groupId>org.testcontainers</groupId>
    		<artifactId>junit-jupiter</artifactId>
			<version>${testcontainers.version}</version>
    		<scope>test</scope>
		</dependency>

		 <!-- Spring Boot Starter OAuth2 Client -->
    	<dependency>
        	<groupId>org.springframework.boot</groupId>
        	<artifactId>spring-boot-starter-oauth2-client</artifactId>
    	</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
    
    	<!-- Spring Boot Starter Security -->
    	<dependency>
        	<groupId>org.springframework.boot</groupId>
        	<artifactId>spring-boot-starter-security</artifactId>
    	</dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>

    </dependencies>

	<build>
		<plugins>
			<plugin>
        		<groupId>org.springframework.boot</groupId>
        		<artifactId>spring-boot-maven-plugin</artifactId>
      		</plugin>
			<plugin>
    			<groupId>org.apache.maven.plugins</groupId>
   				<artifactId>maven-surefire-plugin</artifactId>
    			<version>3.2.5</version>
    			<configuration>
        			<argLine>-Dnet.bytebuddy.experimental=true --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
    			</configuration>
			</plugin>

			 <plugin>
                <groupId>org.openapitools</groupId>
                <artifactId>openapi-generator-maven-plugin</artifactId>
                <version>${openapi-generator.version}</version>
                <executions>
                    <execution>
                        <id>generate-payment-client</id>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>${project.basedir}/../payment/src/main/resources/dock-api.yaml</inputSpec>
                            <generatorName>java</generatorName>
                            <library>webclient</library>
                            <apiPackage>ru.yandex.practicum.mymarket.payment.api</apiPackage>
                            <modelPackage>ru.yandex.practicum.mymarket.payment.model</modelPackage>
                            <generateApiTests>false</generateApiTests>
                            <generateModelTests>false</generateModelTests>
                            <configOptions>
                                <useJakartaEe>true</useJakartaEe>
                                <reactive>true</reactive>
                                <openApiNullable>false</openApiNullable>
                            </configOptions>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
		</plugins>
	</build>
</project>